# choices2526-emo-words-search

./: .gitignore  README.md  emotional_words_gen.ipynb  pyproject.toml
