[project]
name = "choices2526-emo-words-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black>=25.11.0",
    "isort>=6.1.0",
    "nltk>=3.9.2",
    "pypdf2>=3.0.1",
    "pytest>=8.4.2",
    "pytest-check>=2.8.0",
    "seaborn>=0.13.2",
]
